crates/hexeract-macros/tests/ui/fail_wrong_output_type.stderr
error[E0308]: mismatched types
  --> tests/ui/fail_wrong_output_type.rs:15:1
   |
15 | #[handler(command)]
   | ^^^^^^^^^^^^^^^^^^^ expected `Result<u32, HexeractError>`, found `Result<String, HexeractError>`
   |
   = note: expected enum `Result<u32, HexeractError>`
              found enum `Result<String, HexeractError>`
